--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+lib-js-cov
+coverage.html
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -26,3 +28,8 @@ node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+# Compiled JS library
+lib-js
+
+npm-debug.log
