--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/Clever/kayvee-node/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
