--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kayvee",
   "description": "Write data to key=val pairs, for human and machine readability",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
     "underscore.deep": "^0.5.1"
   },
   "scripts": {
-    "test": "make -Br test"
+    "test": "make -Br test",
+    "prepublish": "make build"
   },
   "author": "Clever <tech-notify@clever.com>",
   "license": "BSD-2-Clause",
