--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,6 @@
+env:
+- REPORT_CARD_GITHUB_STATUS_TOKEN=$$report_card_github_status_token
+- REPORT_CARD_GITHUB_REPO_TOKEN=$$report_card_github_repo_token
 image: node0.10
 notify:
   email:
@@ -17,6 +20,7 @@ publish:
     when:
       branch: master
 script:
+- sudo pip install -q git+https://$REPORT_CARD_GITHUB_REPO_TOKEN@github.com/Clever/report-card.git; GITHUB_API_TOKEN=$REPORT_CARD_GITHUB_STATUS_TOKEN report-card --publish || true
 - nvm install 0.10.29
 - npm install npm@2.7.0 -g
 - npm install
