--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "url": "git://github.com/Clever/kayvee-node"
   },
   "dependencies": {
-    "underscore": "~1.5.2"
+    "morgan": "^1.7.0",
+    "split": "^1.0.0",
+    "supertest": "^1.2.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
