fix typescript errors

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "git://github.com/Clever/kayvee-node"
   },
   "dependencies": {
+    "ts-node": "^0.7.1",
+    "typescript": "^1.8.9",
     "underscore": "~1.5.2"
   },
   "devDependencies": {
