--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "devDependencies": {
     "coffee-script": "~1.6.3",
+    "eslint": "^2.7.0",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
+    "tslint": "^3.7.4",
     "underscore.deep": "^0.5.1"
   },
   "scripts": {
