typescript compatbility fixes
- fix errors where current code failed basic typescript checking
- update Makefile to use typescript compiler (instead of coffee
  compiler) to make library output
    - put library output in `build/` instead of `lib-js`
    - update `index.js` to look in correct directory for build output,
      so that projects requiring this one will work
- add lots of boilerplate files for typescript and eslint
- add linters for future use

--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "url": "git://github.com/Clever/kayvee-node"
   },
   "dependencies": {
+    "ts-node": "^0.7.1",
+    "typescript": "^1.8.9",
     "underscore": "~1.5.2"
   },
   "devDependencies": {
     "coffee-script": "~1.6.3",
+    "eslint": "^2.7.0",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
+    "tslint": "^3.7.4",
     "underscore.deep": "^0.5.1"
   },
   "scripts": {
