--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ publish:
       branch: master
 script:
 - sudo pip install -q git+https://$REPORT_CARD_GITHUB_REPO_TOKEN@github.com/Clever/report-card.git; GITHUB_API_TOKEN=$REPORT_CARD_GITHUB_STATUS_TOKEN report-card --publish || true
-- nvm install 0.10.29
+- nvm install v5.7.0 > /dev/null
 - npm install npm@2.7.0 -g
 - npm install
 - npm test
