--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "coffee-script": "~1.6.3",
     "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^7.0.0",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
     "tslint": "^3.7.4",
