--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "underscore": "~1.5.2"
   },
   "devDependencies": {
+    "babel-eslint": "^6.0.2",
     "coffee-script": "~1.6.3",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
     "tslint": "^3.7.4",
