--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
+    "express": "^4.13.4",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
-    "tslint": "^3.7.4",
     "ts-node": "^0.7.1",
+    "tslint": "^3.7.4",
     "typescript": "^1.8.9",
     "underscore.deep": "^0.5.1"
   },
