--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,7 @@
 env:
 - REPORT_CARD_GITHUB_STATUS_TOKEN=$$report_card_github_status_token
 - REPORT_CARD_GITHUB_REPO_TOKEN=$$report_card_github_repo_token
-image: node0.10
+image: clever/drone-node:5.7.0
 notify:
   email:
     recipients:
@@ -21,7 +21,5 @@ publish:
       branch: master
 script:
 - sudo pip install -q git+https://$REPORT_CARD_GITHUB_REPO_TOKEN@github.com/Clever/report-card.git; GITHUB_API_TOKEN=$REPORT_CARD_GITHUB_STATUS_TOKEN report-card --publish || true
-- nvm install v5.7.0 > /dev/null
-- npm install npm@2.7.0 -g
 - npm install
 - npm test
