--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "morgan": "^1.7.0",
     "split": "^1.0.0",
     "supertest": "^1.2.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "underscore.deep": "^0.5.1"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
@@ -24,8 +25,7 @@
     "mocha": "~1.17.0",
     "ts-node": "^0.7.1",
     "tslint": "^3.7.4",
-    "typescript": "^1.8.9",
-    "underscore.deep": "^0.5.1"
+    "typescript": "^1.8.9"
   },
   "scripts": {
     "test": "make -Br test",
