Add a ContextLogger to middleware

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "lint": "^1.1.2",
     "mocha": "~1.17.0",
+    "sinon": "^1.17.4",
     "ts-node": "^0.7.1",
     "tslint": "^3.7.4",
     "typescript": "^1.8.9"
