--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
+    "benchmark": "^2.1.1",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
     "lint": "^1.1.2",
+    "microtime": "^2.1.1",
     "mocha": "~1.17.0",
     "sinon": "^1.17.4",
     "ts-node": "^0.7.1",
