--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "morgan": "^1.7.0",
     "split": "^1.0.0",
     "supertest": "^1.2.0",
-    "underscore": "^1.8.3",
-    "underscore.deep": "^0.5.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.2",
