--- a/.drone.yml
+++ b/.drone.yml
@@ -23,4 +23,5 @@ script:
 - sudo pip install -q git+https://$REPORT_CARD_GITHUB_REPO_TOKEN@github.com/Clever/report-card.git; GITHUB_API_TOKEN=$REPORT_CARD_GITHUB_STATUS_TOKEN report-card --publish || true
 - npm install
 - npm test
+- make benchmarks
 - make build
