logger: update mockRouter to return actual routed logs
previously, just counted the number of logs that matched each rule.
also, adds test coverage.

--- a/test/kvconfig.yml
+++ b/test/kvconfig.yml
@@ -5,3 +5,9 @@ routes:
     output:
       type: "analytics"
       series: "requests.everything"
+  rule-two:
+    matchers:
+      title: [ "foo-title" ]
+    output:
+      type: "analytics"
+      series: "requests.everything"
