--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
     "mocha": "~1.17.0",
+    "prettier": "^0.15.0",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
     "ts-node": "^0.7.1",
