--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,6 @@ jobs:
         command: npm install
         name: npm install
     - run: make build
-    - run: npm install
     - run: npm test
     - run: make benchmarks
+    - run: if [ "${CIRCLE_BRANCH}" == "master" ]; then $HOME/ci-scripts/circleci/npm-publish $NPM_TOKEN .; fi;
