--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "express": "^4.13.4",
-    "mocha": "~1.17.0",
+    "mocha": "^2.5.3",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
     "ts-node": "^0.7.1",
