--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "url": "git://github.com/Clever/kayvee-js"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.0.3",
+    "@opentelemetry/exporter-otlp-grpc": "^0.26.0",
+    "@opentelemetry/resources": "^1.0.0",
+    "@opentelemetry/sdk-metrics-base": "^0.26.0",
+    "@opentelemetry/semantic-conventions": "^1.0.0",
     "js-yaml": "^3.6.1",
     "jsonschema": "^1.1.0",
     "morgan": "^1.7.0",
     "qs": "^6.9.4",
     "split": "^1.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@clever/prettier-config": "1.0.0",
