change logic to store metrics and update readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": false
+        "noImplicitAny": false,
+        "allowJs": true,
     },
     "exclude": [
         "node_modules"
-    ]
+    ],
+    "typingOptions": {
+        "enableAutoDiscovery": true
+    }
 }
